# sphinx_tacc_theme

./: .gitignore  README.md  pyproject.toml
sphinx_tacc_theme/: __init__.py  theme.toml
sphinx_tacc_theme/static/css/: tacc-theme.css
